[package]
name = "pretty_env_logger"
version = "0.5.0"
description = "a visually pretty env_logger"
repository = "https://github.com/project-anni/pretty-env-logger"
authors = ["Sean McArthur <sean@seanmonstar>", "Yesterday17 <mmf@mmf.moe>"]
license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.9.0"
log = "0.4"
